--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,11 @@
-
+<style>
+img{
+  display: block;
+  align-self: center;
+  border-radius: 50px;
+  padding-left: 30%;
+}
+</style>
+<div class="container">
+  <img src='https://i.axs.com/2015/05/promoted-media_5563c61b0df32.jpg'>
+</div>
