--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,8 +2,8 @@
 <h1 id="signup_welcome">Sign Up</h1>
   <form action='/signup' method="POST">
 
-    <label for='username'>Username</label>
-    <input type="text" name='username'><br>
+    <label for='name'>Name</label>
+    <input type="text" name='name'><br>
 
     <label for='email'>Email</label>
     <input type="text" name='email'><br>
@@ -13,5 +13,5 @@
 
     <input type="submit" value="Submit"><br>
   </form>
-      <a href="/signup">Already Signed Up?</a>
+      <a href="/login">Already Signed Up?</a>
 </div>
