--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,8 +2,8 @@
   <h1 id="login_welcome">Login</h1>
     <form action='/login' method="POST">
 
-      <label for='username'>Username</label>
-      <input type="text" name='username'><br>
+      <label for='name'>Name</label>
+      <input type="text" name='name'><br>
 
       <label for='password'>Password</label>
       <input type="text" name='password'><br>
