--- a/app/views/movies/new.erb
+++ b/app/views/movies/new.erb
@@ -1,4 +1,4 @@
-<h1><%=current_user.username.capitalize %>, add a new movie to your catalog</h1>
+<h1><%=current_user.name.capitalize %>, add a new movie to your catalog</h1>
 
 <form action="/movies" method="POST">
 
