--- a/app/views/movies/show.erb
+++ b/app/views/movies/show.erb
@@ -1,3 +1,3 @@
 <h1>Movie Title: <%= @movie.name %></h1>
-<h3>User:<a href="/users/<%=@movie.user.slug%>"> <%= @movie.user.name %> </a></h3>
-<h5>Genre:<a href="/genres/<%=genre.slug%>"> <%= @movie.genre %> </a></h5>
+<h3>User:<a href="/users/<%=current_user.slug%>"> <%= @movie.user.name %> </a></h3>
+<h5>Genre:<a href=""> <%= @movie.genre %> </a> @movie.genre </h5>
