added edit function

--- a/app/views/movies/edit.erb
+++ b/app/views/movies/edit.erb
@@ -6,8 +6,8 @@
   <label for="name">Name</label>
   <input type="text" name="movie[name]" id="name" value="<%= @movie.name %>">
 
-  <label for="user_name"> User Name </label>
-  <input type="text" name="user_name" value="<%= @movie.user.name %>" > </br>
+  <label for="review"> Review </label>
+  <input type="text" name="review" value="<%= @movie.review %>" > </br>
 
 
     <label>Genre</label>
