--- a/app/views/movies/index.erb
+++ b/app/views/movies/index.erb
@@ -4,6 +4,6 @@
 <% if @movies.size != 0 %>
   <% @movies.each do |movie| %>
     <h3>Movie Title: <a href="/movies/<%=movie.slug%>"> <%= movie.name %> </a></h3>
-    <p> added by: <%= movie.user %>
+    <p> added by: <% if movie.user != nil %><%= movie.user.name %><%end%>
     <% end %>
   <% end %>
