--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,13 +12,14 @@
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+            <% if logged_in? %>
+            <a class="navbar-brand" href="/movies">Watchlist</a>
+            <% else %>
             <a class="navbar-brand" href="/">Watchlist</a>
+            <% end %>
+          </div>
+          <div class="nav navbar-nav navbar-left">
+            <li><a href="/movies">Movies </a></li>
           </div>
             <div class="nav navbar-nav navbar-right"><!-- add login/logout functionality -->
               <% if !logged_in? %>
@@ -34,7 +35,13 @@
       <br>
         <h1 align="center">Welcome to Watchlist <% if logged_in? %> <%= current_user.name.capitalize %> <%end%></h1>
       <br>
+      <div class="container">
         <%= yield %>
+      </div>
     </div>
   </body>
+  <style>
+  body {
+    background-color: rgba(196, 209, 221, 0.2);
+  }
 </html>
