--- a/app/views/movies/edit.erb
+++ b/app/views/movies/edit.erb
@@ -4,15 +4,27 @@
   <input type="hidden" name="_method" value="PATCH">
 
   <label for="name">Name</label>
-  <input type="text" name="movie[name]" id="name" value="<%= @movie.name %>">
+  <input type="text" name="movie[name]" id="name" value="<%= @movie.name %>"><br>
+
+  <label>Genre</label>
+  <input type="text" name="genre_name" value="<%= @movie.genre %>"><br>
 
   <label for="review"> Review </label>
-  <input type="text" name="review" value="<%= @movie.review %>" > </br>
+  <input type="text" name="review" value="<%= @movie.review %>" class='review'> </br>
 
-
-    <label>Genre</label>
-    <input type="text" name="genre_name">
-
-
-  <input type="submit" value="Save">
+  <input type="submit" value="Save" class='s_btn'>
 </form>
+
+<style>
+.review {
+  width: 300px;
+}
+
+.s_btn {
+  width: 100px;
+  color: blue;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: rgba(71, 160, 249, 0.3);
+}
+</style>
