--- a/app/views/movies/index.erb
+++ b/app/views/movies/index.erb
@@ -2,8 +2,31 @@
 <h4><a href='/movies/new'>add movie</a></h4>
 
 <% if @movies.size != 0 %>
+<div class="row">
   <% @movies.each do |movie| %>
+  <div class="col-sm-4 movie-poster">
     <h3>Movie Title: <a href="/movies/<%=movie.slug%>"> <%= movie.name %> </a></h3>
-    <p> added by: <% if movie.user != nil %><%= movie.user.name %><%end%>
+    <p> added by:
+    <% if movie.user.id == current_user.id%>
+      You
+      <% else %>
+      <%= movie.user.name %>
+      <%end%>
+    </p>
+    </div>
     <% end %>
   <% end %>
+
+  <style>
+  .movie-poster{
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 2px;
+    background-color: rgba(193, 219, 245, 0.2);
+  }
+
+  .movie-poster:hover {
+    background-color: rgba(193, 219, 245, 1);
+}
+  </style>
