--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,10 +2,10 @@
 <h1 id="signup_welcome">Sign Up</h1>
   <form action='/signup' method="POST">
 
-    <label for='name'>Name</label>
+    <label for='name'>Name &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
     <input type="text" name='name'><br>
 
-    <label for='email'>Email</label>
+    <label for='email'>Email &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
     <input type="text" name='email'><br>
 
     <label for='password'>Password</label>
