--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,14 +1,19 @@
 <div class="container" align='center' id='signup'>
   <h1 id="login_welcome">Login</h1>
+  <br>
     <form action='/login' method="POST">
 
-      <label for='name'>Name</label>
-      <input type="text" name='name'><br>
+      <label for='name'>Name  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
+      <input type="text" name='name'>
+      <br>
+      <br>
 
       <label for='password'>Password</label>
-      <input type="text" name='password'><br>
-
+      <input type="text" name='password'>
+      <br>
+      <br>
       <input type="submit" id='submit' value="Login"><br>
+      <br>
     </form>
     <a href="/signup">New User?</a>
 </div>
