--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -9,7 +9,7 @@
       <br>
 
       <label for='password'>Password</label>
-      <input type="text" name='password'>
+      <input type="password" name='password'>
       <br>
       <br>
       <input type="submit" id='submit' value="Login"><br>
