--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,9 @@
-/users/show.erb
+<ul>
+<% @user.movies.each do |movie| %>
+  <li>
+    <h1> <a href="/movies/<%=movie.slug%>"> <%= movie.name %> </a></h1>
+  </li>
+  <h3> Genre:<%= movie.genre %></a> </h3>
+  <p> <%= movie.review %> </p>
+<% end %>
+</ul>
