--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,12 @@
 <style>
-img{
-  display: block;
-  align-self: center;
-  border-radius: 50px;
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    border-radius: 20px;
 }
 </style>
 <div class="container">
-  <img src='https://i.axs.com/2015/05/promoted-media_5563c61b0df32.jpg'>
+  <a href="/login"><img src='https://i.axs.com/2015/05/promoted-media_5563c61b0df32.jpg'></a>
 </div>
