added failure page

--- a/app/views/movies/failure.erb
+++ b/app/views/movies/failure.erb
@@ -1,1 +1,12 @@
-<h1>Sorry, you can't not edit this movie. </h1>
+<h1 align="center">Sorry, you can't not edit this movie. </h1>
+<h2 align="center"><a href="/movies">RETURN TO MOVIES</a></h2>
+<img src="https://screencraft.org/wp-content/uploads/2016/08/1a-1.jpg">
+<style>
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    border-radius: 20px;
+}
+</style>
