added required to forms and success notification on show page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,6 +7,9 @@ img {
     border-radius: 20px;
 }
 </style>
+<% if !!flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
 <div class="container">
   <a href="/login"><img src='https://i.axs.com/2015/05/promoted-media_5563c61b0df32.jpg'></a>
 </div>
