--- a/app/views/movies/new.erb
+++ b/app/views/movies/new.erb
@@ -3,14 +3,14 @@
 <form action="/movies" method="POST">
 
   <label for="Name"> Movie Name </label>
-  <input type="text" name="Name"> </br>
+  <input type="text" name="Name" required> </br>
 
   <label for="Release_Year"> Release Year </label>
-  <input type="text" name="Release_Year"> </br>
+  <input type="text" name="Release_Year" required> </br>
 
 
     <label for='genre'>Genre</label>
-     <input type="text" name="genre">
+     <input type="text" name="genre" required>
 
   <input type="submit" value="Create">
 </form>
