--- a/app/views/movies/index.erb
+++ b/app/views/movies/index.erb
@@ -1,5 +1,7 @@
-<h1>Movies</h1>
-<a href="/movies/new"><input type='submit' class="a_btn" value="Add Movie"></a>
+<div class="row">
+  <h1 class='col-sm-10'>Movies</h1>
+  <a href="/movies/new"><input type='submit' class="a_btn" value="Add Movie"></a>
+</div>
 
 <% if @movies.size != 0 %>
 <div class="row">
@@ -45,7 +47,6 @@
 }
 
 .a_btn{
-  align: right;
   display: inline;
   width: 100px;
   color: green;
