updated genres controller

--- a/app/views/movies/edit.erb
+++ b/app/views/movies/edit.erb
@@ -7,7 +7,7 @@
   <input type="text" name="movie[name]" id="name" value="<%= @movie.name %>"><br>
 
   <label>Genre</label>
-  <input type="text" name="genre_name" value="<%= @movie.genre %>"><br>
+  <input type="text" name="genre_name" value="<%= @movie.genre.name %>"><br>
 
   <label for="review"> Review </label>
   <input type="text" name="review" value="<%= @movie.review %>" class='review'> </br>
