--- a/app/views/movies/show.erb
+++ b/app/views/movies/show.erb
@@ -19,7 +19,7 @@
       <%end %>
     </p>
     <% end %>
-  <h5>Genre:<a href="/genres"> <%= @movie.genre %> </a></h5>
+  <h5>Genre:<a href="/genres/<%=@movie.genre.slug%>"> <%= @movie.genre.name %> </a></h5>
 
   <% if current_user == @movie.user %>
 
