added release year to show page

--- a/app/views/movies/new.erb
+++ b/app/views/movies/new.erb
@@ -6,7 +6,7 @@
   <input type="text" name="Name" required> </br>
 
   <label for="Release_Year"> Release Year </label>
-  <input type="text" name="Release_Year" required> </br>
+  <input type="text" name="release_year" required> </br>
 
 
     <label for='genre'>Genre</label>
