updated edit page to include release year

--- a/app/views/movies/edit.erb
+++ b/app/views/movies/edit.erb
@@ -9,6 +9,9 @@
   <label>Genre</label>
   <input type="text" name="genre_name" value="<%= @movie.genre.name %>"><br>
 
+  <label for="Release_Year"> Release Year </label>
+  <input type="text" name="release_year" value="<%=@movie.release_year%>"> </br>
+
   <label for="review"> Review </label>
   <input type="text" name="review" value="<%= @movie.review %>" class='review'> </br>
 
