added styling to login page

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -12,8 +12,23 @@
       <input type="password" name='password'>
       <br>
       <br>
-      <input type="submit" id='submit' value="Login"><br>
+      <input type="submit" id='submit' value="Login" class="login_btn"><br>
       <br>
     </form>
     <a href="/signup">New User?</a>
 </div>
+
+<style>
+.login_btn {
+    background-color: white;
+    color: black;
+    border: 2px solid #008CBA;
+    border-radius: 5px;
+    width: 15%;
+}
+
+.login_btn:hover {
+  background-color: rgba(0, 50, 200, 0.1);
+  opacity: 50%;
+
+}
