added styling to new user

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -9,9 +9,24 @@
     <input type="text" name='email'><br>
 
     <label for='password'>Password</label>
-    <input type="password" name='password'><br>
+    <input type="password" name='password'><br><br>
 
-    <input type="submit" value="Submit"><br>
+    <input type="submit" value="Submit" class="sign_up_btn">
+    <br><br>
   </form>
       <a href="/login">Already Signed Up?</a>
 </div>
+<style>
+.sign_up_btn {
+    background-color: white;
+    color: black;
+    border: 2px solid #008CBA;
+    border-radius: 5px;
+    width: 15%;
+}
+
+.sign_up_btn:hover {
+  background-color: rgba(0, 50, 200, 0.1);
+}
+
+</style>
